cmake_minimum_required(VERSION 3.0.0)
project(Aufgabe_Gruppenvorstellung VERSION 0.1.0)

add_executable(Aufgabe_Gruppenvorstellung
               main.cpp 
               josua_waldenmayer.cpp
               alex_merk.cpp
               thomas_horny.cpp
               anna_wilusch.cpp
               otto_altfatter.cpp)



